--- a/statAnimmlaHunting_AnimalCrossing/statAnimmlaHunting_AnimalCrossing.vcxproj
+++ b/statAnimmlaHunting_AnimalCrossing/statAnimmlaHunting_AnimalCrossing.vcxproj
@@ -141,13 +141,16 @@
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="DataBase.cpp" />
+    <ClCompile Include="SpecieString.cpp" />
     <ClCompile Include="statAnimmlaHunting_AnimalCrossing.cpp" />
-    <ClCompile Include="Village.cpp" />
+    <ClCompile Include="Vue.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h" />
     <ClInclude Include="DataBase.h" />
-    <ClInclude Include="Village.h" />
+    <ClInclude Include="Specie.h" />
+    <ClInclude Include="SpecieString.h" />
+    <ClInclude Include="Vue.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
